# AtlasNet

./: .gitignore  README.md  test.py
auxiliary/: dataset.py  dataset_TC.py  model.py  utils.py
config/: config.json  obj_paths.txt  shapenet_classes.yaml
data/: download_data.sh
inference/: run_AE_AtlasNet.py  run_TC_AtlasNet.py
log/2019-09-05T14:14:24.268793/: log.txt
log/2019-09-05T15:02:45.749011/: log.txt
scripts/: CMakeLists.txt  get_obj_paths.py  obj_to_pcd.cpp  obj_to_pcd.py
trained_models/25_Primatives_Test/: log.txt
training/: train_AE_AtlasNet.py  train_TangConv_AtlasNet.py
utils/: cloud.py  downsample_pointcloud.py  downsample_pointcloud_random.py  precompute.py  tensor_org.py
