cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(OBJ2PCD)
# find_package(VTK 8.2 REQUIRED COMPONENTS)
# include(${VTK_USE_FILE})
find_package(PCL 1.7 REQUIRED COMPONENTS common io visualization filters)
# find_package(VTK 8.2 REQUIRED COMPONENTS)
# message("found vtk" ${VTK_MAJOR_VERSION}, ${VTK_MINOR_VERSION})
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(obj2pcd obj_to_pcd.cpp)
target_link_libraries(obj2pcd ${PCL_LIBRARIES} ${VTK_LIBRARIES})
